--- a/web/public/dashboard.html
+++ b/web/public/dashboard.html
@@ -3,8 +3,38 @@
 <head>
   <meta charset="UTF-8">
   <title>Dashboard</title>
+  <style>
+  .logo {
+      position: fixed;
+      top: 20px;
+      left: 10px;
+      font-size: 18px;
+      font-weight: bold;
+      color: white;
+      background-color: #555;
+      padding: 6px 14px;
+      border-radius: 8px;
+      z-index: 999; /* Less than the toggleTheme button */
+      box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.2);
+      font-family: Arial, sans-serif, system-ui;
+    }
+    .logo-img {
+      height: 24px;
+      width: auto;
+      margin-left: -14px; /* new line to fix gap */
+      width: auto;
+      vertical-align: middle;
+    }
+    body {
+      margin-top: 80px; /* Adjust so content starts below the logo */
+    }
+    </style>
+    <a href="index.html" class="logo" style="text-decoration: none;">
+    <img src="./logos/cute_logo.png" alt="Logo" class="logo-img">ChatAIComp
+    </a>
 </head>
 <body>
+  
     <h1>Welcome to Your Dashboard!</h1>
   
     <div style="margin-bottom: 20px;">
