played with scaling settings for the styles in the dashboard. Dashboard scales and should be a good example on how to scale the other pages like the homepage

--- a/web/public/dashboard.html
+++ b/web/public/dashboard.html
@@ -6,9 +6,9 @@
   <style>
   .logo {
       position: fixed;
-      top: 20px;
-      left: 10px;
-      font-size: 18px;
+      top: 1vw;
+      left: 1vw;
+      font-size: 1.2rem;
       font-weight: bold;
       color: white;
       background-color: #555;
@@ -19,7 +19,7 @@
       font-family: Arial, sans-serif, system-ui;
     }
     .logo-img {
-      height: 24px;
+      height: 1em;
       width: auto;
       margin-left: -14px; /* new line to fix gap */
       width: auto;
