finished the scaling for the dashboard for different screen sizes

--- a/web/public/dashboard.html
+++ b/web/public/dashboard.html
@@ -26,7 +26,12 @@
       vertical-align: middle;
     }
     body {
-      margin-top: 80px; /* Adjust so content starts below the logo */
+      margin: 0;
+      padding: 0;
+      margin-top: 80px;
+      min-height: 100vh;
+      width: 100vw;
+      /* Remove max-width and centering margins */
     }
     </style>
     <a href="index.html" class="logo" style="text-decoration: none;">
