basic hightlight, js whitespace issue not handled correctly

--- a/web/protected/searchpage.html
+++ b/web/protected/searchpage.html
@@ -112,11 +112,17 @@
         const chatDiv = document.createElement('div');
         chatDiv.className = 'chat-session';
 
+        function highlight(text, keyword) {
+          const escaped = keyword.replace(/[-\/\\^$*+?.()|[\]{}]/g, '\\$&');
+          const regex = new RegExp(`(${escaped})`, 'gi');
+          return text.replace(regex, '<mark>$1</mark>');
+        }
+
         chatDiv.innerHTML = `
-            <div class="prompt">🗣️ <strong>Prompt:</strong> ${chat.prompt}</div>
-            ${chat.responses.map(r =>
-            `<div class="response">🤖 <strong>${r.model}</strong>: ${r.content}</div>`
-            ).join('')}
+          <div class="prompt">🗣️ <strong>Prompt:</strong> ${highlight(chat.prompt, keyword)}</div>
+          ${chat.responses.map(r =>
+            `<div class="response">🤖 <strong>${r.model}</strong>: ${highlight(r.content, keyword)}</div>`
+          ).join('')}
         `;
 
         resultsDiv.appendChild(chatDiv);
