--- a/web/protected/searchpage.html
+++ b/web/protected/searchpage.html
@@ -113,8 +113,10 @@
         chatDiv.className = 'chat-session';
 
         function highlight(text, keyword) {
-          const escaped = keyword.replace(/[-\/\\^$*+?.()|[\]{}]/g, '\\$&');
-          const regex = new RegExp(`(${escaped})`, 'gi');
+          const words = keyword.trim().split(/\s+/).map(w =>
+            w.replace(/[-\/\\^$*+?.()|[\]{}]/g, '\\$&')
+          );
+          const regex = new RegExp(`(${words.join('|')})`, 'gi');
           return text.replace(regex, '<mark>$1</mark>');
         }
 
