Added a background toggle for the dashboard page. It sets the background in both index and dashboard. I also added a css sheet to  make it easier to style the new toggle

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -559,5 +559,13 @@ function openTagEditor(model, chatId, responseId) {
     document.getElementById('resetTheme').addEventListener('click', resetTheme);
     
   </script>
+  <script>
+    document.addEventListener('DOMContentLoaded', () => {
+      const savedBackground = localStorage.getItem('selectedBackground');
+      if (savedBackground) {
+        document.body.style.backgroundImage = `url(${savedBackground})`;
+      }
+    });
+  </script>
 </body>
 </html>
